# NH3D

./: .clang-format  .clangd  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  build_shaders.sh
src/: main.cpp
src/components/: mesh_component.hpp
src/core/: aabb.cpp  aabb.hpp
src/editor/: main.cpp
src/general/: engine.cpp  engine.hpp  resource_mapper.cpp  resource_mapper.hpp  window.cpp  window.hpp
src/misc/: math.hpp  types.hpp  utils.hpp
src/rendering/core/: bind_group.hpp  buffer.hpp  compute_shader.hpp  enums.hpp  frame_resource.hpp  generate_enum.py  gpu_mesh.hpp  handle.hpp  material.hpp  mesh.hpp  resource_manager.hpp  rhi.hpp  rhi_concept.hpp  rhi_interface.hpp  shader.hpp  split_pool.hpp  texture.hpp
src/rendering/render_graph/: render_graph.cpp  render_graph.hpp
src/rendering/shaders/: common.inc.glsl  culling.comp  culling.comp.spv  culling.inc.glsl  debug_aabb.frag  debug_aabb.frag.spv  debug_aabb.vert  debug_aabb.vert.spv  debug_aabb_culling.comp  debug_aabb_culling.comp.spv  debug_ui.frag  debug_ui.frag.spv  debug_ui.vert  debug_ui.vert.spv  default.frag  default.vert  default_gbuffer_deferred.frag  default_gbuffer_deferred.frag.spv  default_gbuffer_deferred.vert  default_gbuffer_deferred.vert.spv  deferred_shading.comp  deferred_shading.comp.spv  gradient.comp  gradient.comp.spv  structs.inc  structs.inc.glsl  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
src/rendering/vulkan/: vulkan_bind_group.cpp  vulkan_bind_group.hpp  vulkan_buffer.cpp  vulkan_buffer.hpp  vulkan_compute_pipeline.cpp  vulkan_compute_pipeline.hpp  vulkan_compute_shader.cpp  vulkan_compute_shader.hpp  vulkan_debug_drawer.cpp  vulkan_debug_drawer.hpp  vulkan_descriptor_set_pool.hpp  vulkan_enums.hpp  vulkan_graphics_pipeline.cpp  vulkan_graphics_pipeline.hpp  vulkan_pipeline.cpp  vulkan_pipeline.hpp  vulkan_rhi.cpp  vulkan_rhi.hpp  vulkan_shader.cpp  vulkan_shader.hpp  vulkan_texture.cpp  vulkan_texture.hpp
src/scene/: scene.cpp  scene.hpp
src/scene/ecs/: component_view.hpp  dynamic_bitset.hpp  entity.hpp  entity_manager.hpp  hierarchy_sparse_set.hpp  interface_sparse_set.hpp  sparse_set.hpp  sparse_set_map.cpp  sparse_set_map.hpp  subtree_view.cpp  subtree_view.hpp
src/scene/ecs/components/: camera_component.cpp  camera_component.hpp  hierarchy_component.cpp  hierarchy_component.hpp  mesh_component.cpp  mesh_component.hpp  render_component.cpp  render_component.hpp  transform_component.cpp  transform_component.hpp
tests/: CMakeLists.txt  mock_rhi.hpp
tests/rendering/core/: mock_rhi.hpp  resource_manager.cpp  split_pool.cpp
tests/rendering/vulkan/: enums.cpp
tests/scene/: hierarchy.cpp  scene.cpp
tests/scene/ecs/: component_view.cpp  dynamic_bitset.cpp  entity_manager.cpp  hierarchy_sparse_set.cpp  sparse_set.cpp  sparse_set_map.cpp
tests/scene/ecs/components/: transform_component.cpp
